--- a/templates/success.html
+++ b/templates/success.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Success</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block main %}
+
 <h1> successfully submitted!</h1>
-</body>
-</html>
+
+{% endblock main %} 
